[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/entities/npc/skeleton/Skeleton.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_left_walk_1.png" type="Texture" id=2]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_right_attack_1.png" type="Texture" id=3]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_right_idle_1.png" type="Texture" id=4]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_right_attack_2.png" type="Texture" id=5]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_down_walk_2.png" type="Texture" id=6]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_down_attack_2.png" type="Texture" id=7]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_down_walk_1.png" type="Texture" id=8]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_right_idle_2.png" type="Texture" id=9]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_left_idle_1.png" type="Texture" id=10]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_left_walk_2.png" type="Texture" id=11]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_right_walk_1.png" type="Texture" id=12]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_up_walk_2.png" type="Texture" id=13]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_up_attack_2.png" type="Texture" id=14]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_left_attack_1.png" type="Texture" id=15]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_left_idle_2.png" type="Texture" id=16]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_up_walk_1.png" type="Texture" id=17]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_left_attack_2.png" type="Texture" id=18]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_death_6.png" type="Texture" id=19]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_down_attack_1.png" type="Texture" id=20]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_death_5.png" type="Texture" id=21]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_death_3.png" type="Texture" id=22]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_up_attack_1.png" type="Texture" id=23]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_up_idle_1.png" type="Texture" id=24]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_up_idle_2.png" type="Texture" id=25]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_death_4.png" type="Texture" id=26]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_right_walk_2.png" type="Texture" id=27]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_death_1.png" type="Texture" id=28]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_down_idle_1.png" type="Texture" id=29]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_death_2.png" type="Texture" id=30]
[ext_resource path="res://scenes/entities/npc/skeleton/skeleton_frames/skeleton_down_idle_2.png" type="Texture" id=31]
[ext_resource path="res://scenes/entities/npc/skeleton/SFX.gd" type="Script" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 30 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 21 ), ExtResource( 19 ) ],
"loop": false,
"name": "death",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 9 ) ],
"loop": true,
"name": "right_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 14 ), ExtResource( 23 ) ],
"loop": false,
"name": "up_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 17 ), ExtResource( 24 ), ExtResource( 13 ) ],
"loop": true,
"name": "up_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 31 ) ],
"loop": true,
"name": "down_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 22 ), ExtResource( 30 ), ExtResource( 28 ) ],
"loop": false,
"name": "birth",
"speed": 7.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 16 ) ],
"loop": true,
"name": "left_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "up_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 8 ), ExtResource( 29 ), ExtResource( 6 ) ],
"loop": true,
"name": "down_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "left_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 15 ), ExtResource( 18 ) ],
"loop": false,
"name": "left_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 20 ), ExtResource( 7 ) ],
"loop": false,
"name": "down_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": false,
"name": "right_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 12 ), ExtResource( 27 ) ],
"loop": true,
"name": "right_walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.41974, 7.7921 )

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Skeleton" type="KinematicBody2D"]
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.471937, 0 )
scale = Vector2( 0.957097, 1 )
frames = SubResource( 1 )
animation = "down_idle"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
script = ExtResource( 32 )
[connection signal="attack" from="." to="SFX" method="_on_Skeleton_attack"]
[connection signal="death" from="." to="SFX" method="_on_Skeleton_death"]
[connection signal="hurt" from="." to="SFX" method="_on_Skeleton_hurt"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
